--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>pacula.dev</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pacula.dev/">
+    <meta property="og:title" content="pacula.dev">
+    <meta property="og:description" content="Derek Pacula - Full Stack Web Developer">
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://pacula.dev/">
+    <meta property="twitter:title" content="pacula.dev">
+    <meta property="twitter:description" content="Derek Pacula - Full Stack Web Developer">
+    <meta property="twitter:image" content="%PUBLIC_URL%/preview.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
